# profinet-py

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  pyproject.toml
.githooks/: no-ai-coauthor
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-format.yml  ci.yml  cla.yml  release.yml
examples/: 10_expected_submodule.py  README.md
profinet/: __init__.py  alarm_listener.py  cli.py  dcp.py  gsdml.py  protocol.py  rpc.py  util.py
tests/: test_cyclic_hw.py  test_rpc.py  test_util.py
